--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MAGIC-Talk Demo (ICCV 2025)</title>
+  <title>MAGIC-Talk Demo</title>
   <meta charset="UTF-8">
   <style>
     body {
